CHANGELOG
=========


2021-07-16
----------
### Specfile
* Rewrite version detection to regex instead of rpmspec.

### libraries.io latest version
* Handle error when library is not found with error message.

### Common
* Software name detection: handle the 'python3-' prefix as well.

2021-07-04
----------
### Changelog extractor
* Markdown: Support for isort
* Removed isort-flavor

2021-07-03
----------
### Base
* Rewrite config file parser to single file.
* New file `helpers` in common directory to detect the software name.

### Specfile Version Updater
* New script to update the version in the spec file, remove the old tarball and add the new one.

### Libraries.io latest version
* New script to fetch latest version of a software from libraries.io.

### Changelog extractor
* Add support for time-machine changelogs (rst).
* Tests: add tests for base.
* Add support for passivetotal changelogs (markdown).

2020-04-02
----------
### Changelog extractor
* Add parameter `--archive` to specify code archive as argument.

2020-03-30
----------
### Changelog extractor
* Debian conversion: Detect new style author lines and versions with postfixes.

2020-03-15
----------

### Changelog extractor
* Do not consider hidden files (starting with `.`) as potential changelog files in the tarballs.


2020-01-18
----------

### Changelog extractor
* Fix detection of previous version if version only get postfixes (like '2' and '2.1').
* Fix conversion for pymisp: indentation missed one additional space.

2019-11-16
----------

### Changelog extractor
* Add git style support with autodetection


2019-08-09
----------

### Changelog extractor
* More robust changes-file parsing / last version extraction.


2019-08-03
----------

### Changelog extractor
- optionally use previous version from parameter (#4)
- Fix wrong variable name: detection of changelog filenames `debian/changelog` (#5)


2019-07-25
----------

### Changelog extractor
* (Py)MISP support added

### Tests